2009-07-27  Josep Joan Ribas  <jribas@flumotion.com>

	reviewed by: jlegoff

	* data/image/wizard/Makefile.am:
	* data/image/wizard/looper.png (added):
	* flumotion/component/producers/looper/Makefile.am:
	* flumotion/component/producers/looper/looper.xml:
	* flumotion/component/producers/looper/wizard.glade (added):
	* flumotion/component/producers/looper/wizard_gtk.py (added):
	Add looper to the production page in the Wizard. Fixes #834.


2009-07-24  Xavier Queralt  <xqueralt@flumotion.com>

	* flumotion/test/test_component_httpserver.py:
	Obviously cortado is not going to be installed always. Install a
	modified getCortadoFilename method to correct this.

2009-07-24  Xavier Queralt  <xqueralt@flumotion.com>

	reviewed by: Jan

	* flumotion/component/plugs/cortado/cortado.py:
	Map the root path to the index page by adding a new child instead of
	checking it for each request. This way the parameters the url can have
	are ignored and don't interfere.
	* flumotion/test/test_component_httpserver.py:
	Unit test cortado plug requests. With and without a GET parameter and
	for an unexistent file.

2009-07-23  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/component/misc/httpserver/cachedprovider.py:
	* flumotion/monitor/nagios/stream.py:
	Clean up after Thomas. Revision r7990 made the python module export a
	sha1 name, but the code was still using sha.
	Spurious breakage FTW.

2009-07-23  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/test/test_bouncers_ipbouncer.py (added):
	Add IP bouncer unit tests.

2009-07-22  Jan Urbanski  <jurbanski@flumotion.com>

	* data/upgrade-to-0.6.0.xsl (added):
	* data/Makefile.am:
	Add a 0.6.0 upgrade xsl. Fixes #1085.

2009-07-22  Xavier Queralt  <xqueralt@flumotion.com>

	reviewed by: Arek, Jan

	* flumotion/admin/admin.py (AdminClientFactory.clientConnectionLost):
	Fallback to the default behaviour when the extraTenacious attribute has
	been set or the admin has been authenticated before. Stop trying to